kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-scale-app
  namespace: fastapi
  labels:
    app: fastapi-scale-app
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: fastapi-scale-app
  template:
    metadata:
      labels:
        app: fastapi-scale-app
    spec:
      containers:
      - name: fastapi-scale-app
        image: fastapi-scale:latest
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c"]
        args:
        - |
          uv run uvicorn main:app --host 0.0.0.0 --port 8000 --loop uvloop --timeout-keep-alive 3600
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          # initialDelaySeconds: 15
          httpGet:
            path: /health
            port: http
        livenessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /health
            port: http
        resources:
          requests:
            cpu: 800m
            memory: 800Mi
