kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-scale-app
  namespace: fastapi
  labels:
    app: fastapi-scale-app
spec:
  selector:
    app: fastapi-scale-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
