kubernetes/manifests/ingress-keda.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: fastapi-ingress-keda
  namespace: fastapi
spec:
  ingressClassName: nginx
  rules:
  - host: keda.fastapi.localdev.me
    http:
      paths:
      - backend:
          service:
            name: keda-add-ons-http-interceptor-proxy
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
